DEV-99 GET create enchanced switch in FarmEquipmentDataService